Implement round-based city distribution with random start color   - Add distributeByColorRounds to CityDistributor: distributes cities     in rounds so all players receive one city per color before rotating,     ensuring each player's first city (= startCity) is of the same     randomly chosen color but a unique city   - startCity is removed from ownedCities so stops=6 yields exactly     5 ownedCities + 1 startCity, not 7   - Reduce CityColor enum to ORANGE, RED, GREEN to match cities.json   - Add JSON loading and getAllCities() to CityDistributor   - Add distributeByColorRounds tests (start color, uniqueness, counts)